fixed not showing divs

--- a/basic/web/css/splashpage.scss
+++ b/basic/web/css/splashpage.scss
@@ -221,7 +221,7 @@ body{
 /**
 *HELPER CLASSES
 **/
-.hidden {
+.weak-hide { //<-- no important = weak
     display:none;
 }
 
